Login Page added

--- a/html-pages/registration.html
+++ b/html-pages/registration.html
@@ -25,6 +25,10 @@
             <br>
             <span class="errmsg" id="passerrmsg"></span>
             <br>
+            First Name : <br><input type="text" class="inp" id="fname" >
+            <br>
+            <span class="errmsg" id="fnameerrmsg"></span>
+            <br>
             Last Name : <br><input type="text" class="inp" id="lname" >
             <br>
             <span class="errmsg" id="lnameerrmsg"></span>
