--- a/html-pages/login.html
+++ b/html-pages/login.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login Page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h3>Login</h3>
+    <div class="regFormcontainer">
+    <h2>Login</h2>
+    <form name = "loginForm" action="" >
+        <p>
+            User Name : <br><input type="text" class="inp" id="luname" >
+            <br>
+            
+            <br>Password : <br><input type="password" class="inp" id="lpassword" >
+            <br>
+            <span class="errmsg" id="loginerrmsg"></span>
+            <br>
+            <input type="button" value="Submit" name="Submit" id="subbtn" onclick="LoginFormValidation()">
+            <input type="reset" value="Reset" name="Reset" />
+            <p>Not a User yet ? <a href="registration.html" >Sign Up Here</a></p>
+        </p>
+
+    </form>
+</div>
 </body>
+<script src="../js/validate.js"></script>
 </html>
