delete feature added

--- a/html-pages/deleteTask.html
+++ b/html-pages/deleteTask.html
@@ -17,10 +17,10 @@
         </ul>
     </div>
     <h3>Delete Tasks</h3>
-    
+        <form>
         <table id="DeleteView"></table>
-        <button onclick="deleteTask()">Delete</button>
-    
+        <input type="button" value="Submit" name="Delete" id="subbtn" onclick="deleteTask()">
+    </form>
 </body>
 <script src="../js/validate.js"></script>
 </html>
