profile page added

--- a/html-pages/deleteTask.html
+++ b/html-pages/deleteTask.html
@@ -13,6 +13,7 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="updateTask.html" >Update task</a></li>
             <li><a class="active" href="#">Delete Task</a></li>
+            <li><a href="profile.html">Profile</a></li>
             <li><a href="login.html" onclick="logout()">Logout</a></li>
         </ul>
     </div>
