--- a/html-pages/updateTask.html
+++ b/html-pages/updateTask.html
@@ -9,14 +9,15 @@
 </head>
 <body onload="viewUpdate()">
     
-        <div class="navbar">
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a class="active" href="#" >Update task</a></li>
-                <li><a href="deleteTask.html">Delete Task</a></li>
-                <li><a href="login.html" onclick="logout()">Logout</a></li>
-            </ul>
-        </div>
+    <div class="navbar">
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a class="active" href="#" >Update task</a></li>
+            <li><a href="deleteTask.html">Delete Task</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="login.html" onclick="logout()">Logout</a></li>
+        </ul>
+    </div>
         <h3>Update Task</h3>
         <table><th class="tablefield">Task id</th><th class="tablefield">Task Name</th><th class="tablefield">Task Details</th><th class="tablefield">Date</th></table>
     <div id = "updateTaskTable"></div>
