--- a/html-pages/index.html
+++ b/html-pages/index.html
@@ -16,6 +16,7 @@
                 <li><a class="active" href="#">HOME</a></li>
                 <li><a href="updateTask.html" >Update task</a></li>
                 <li><a href="deleteTask.html">Delete Task</a></li>
+                <li><a href="profile.html">Profile</a></li>
                 <li><a href="login.html" onclick="logout()">Logout</a></li>
             </ul>
         </div>
