task searchby and sortby added

--- a/html-pages/index.html
+++ b/html-pages/index.html
@@ -14,6 +14,7 @@
         <div class="navbar">
             <ul>
                 <li><a class="active" href="#">HOME</a></li>
+                <li><a href="viewTask.html">View Task</a></li>
                 <li><a href="updateTask.html" >Update task</a></li>
                 <li><a href="deleteTask.html">Delete Task</a></li>
                 <li><a href="profile.html">Profile</a></li>
