--- a/html-pages/profile.html
+++ b/html-pages/profile.html
@@ -11,6 +11,7 @@
     <div class="navbar">
         <ul>
             <li><a href="index.html">HOME</a></li>
+            <li><a href="viewTask.html">View Task</a></li>
             <li><a  href="updateTask.html" >Update task</a></li>
             <li><a href="deleteTask.html">Delete Task</a></li>
             <li><a class="active" href="#">Profile</a></li>
