--- a/html-pages/updateTask.html
+++ b/html-pages/updateTask.html
@@ -11,8 +11,9 @@
     
     <div class="navbar">
         <ul>
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li><li><a href="viewTask.html">View Task</a></li>
             <li><a class="active" href="#" >Update task</a></li>
+            
             <li><a href="deleteTask.html">Delete Task</a></li>
             <li><a href="profile.html">Profile</a></li>
             <li><a href="login.html" onclick="logout()">Logout</a></li>
