task status added

--- a/html-pages/updateTask.html
+++ b/html-pages/updateTask.html
@@ -20,7 +20,7 @@
         </ul>
     </div>
         <h3>Update Task</h3>
-        <table><th class="tablefield">Task id</th><th class="tablefield">Task Name</th><th class="tablefield">Task Details</th><th class="tablefield">Date</th></table>
+        <table><th class="tablefield">Task id</th><th class="tablefield">Task Name</th><th class="tablefield">Task Details</th><th class="tablefield">Date</th><th class="tablefield1">Status</th></table>
     <div id = "updateTaskTable"></div>
     <br>
     <button type="submit" onclick="updateTask()">Update</button>
