--- a/html-pages/viewTask.html
+++ b/html-pages/viewTask.html
@@ -25,8 +25,10 @@
            <option value="">-</option>
            <option value="taskName">TaskName</option>
            <option value="taskDate">Date</option>
+           <option value="taskStatus">Status</option>
            
        </select>
+       <span id="statusSort"></span>
        <br>
        <br>
         <table id="ViewTable">
