user authentication valid users to access pages

--- a/html-pages/viewTask.html
+++ b/html-pages/viewTask.html
@@ -7,7 +7,7 @@
     <title>View Task</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body onload="isSession();">
     <div class="navbar">
         <ul>
             <li><a href="index.html">HOME</a></li>
