added task public,reminder,isdone and updated functionalities

--- a/html-pages/viewTask.html
+++ b/html-pages/viewTask.html
@@ -26,7 +26,8 @@
            <option value="taskName">TaskName</option>
            <option value="taskDate">Date</option>
            <option value="taskStatus">Status</option>
-           
+           <option value="taskReminder">IS Reminder</option>
+           <option value="taskPublic">IS Public</option>
        </select>
        <span id="statusSort"></span>
        <br>
