--- a/html-pages/editProfile.html
+++ b/html-pages/editProfile.html
@@ -13,7 +13,7 @@
         <table>
             <tr>
                 <th>User Name : </th>
-                <td id="username"></td>
+                <td><input class = "profileinp" id="username" disabled></td>
             </tr>
             <tr>
                 <th>First Name : </th>
@@ -41,5 +41,5 @@
     <button type="submit" onclick="editProfile()">Update</button>
     <button onclick="location.href ='profile.html'" >Back</button>
 </body>
-<script src="../js/validate.js"></script>
+<script src="../js/profileView.js"></script>
 </html>
