--- a/html-pages/login.html
+++ b/html-pages/login.html
@@ -15,10 +15,10 @@
         <p>
             User Name : <br><input type="text" class="inp" id="luname" >
             <br>
-            
+            <span class="errmsg" id="loginuerrmsg"></span>
             <br>Password : <br><input type="password" class="inp" id="lpassword" >
             <br>
-            <span class="errmsg" id="loginerrmsg"></span>
+            <span class="errmsg" id="loginperrmsg"></span>
             <br>
             <input type="submit" value="Submit">
             <input type="reset" value="Reset" name="Reset" />
