--- a/html-pages/profile.html
+++ b/html-pages/profile.html
@@ -42,5 +42,5 @@
     </div>
     <a href="editProfile.html">Edit Profile</a>
 </body>
-<script src="../js/validate.js"></script>
+<script src="../js/profileView.js"></script>
 </html>
