--- a/html-pages/registration.html
+++ b/html-pages/registration.html
@@ -20,10 +20,11 @@
             <span class="errmsg" id="unameerrmsg"></span>
             <br>Password : <br><input type="password" class="inp" id="password" >
             <br>
+            <span class="errmsg" id="passerrmsg"></span>
             <br>
             Confirm Password : <br><input type="password" class="inp" id="cpassword" >
             <br>
-            <span class="errmsg" id="passerrmsg"></span>
+            <span class="errmsg" id="cpasserrmsg"></span>
             <br>
             First Name : <br><input type="text" class="inp" id="fname" >
             <br>
