--- a/html-pages/updateTask.html
+++ b/html-pages/updateTask.html
@@ -25,5 +25,5 @@
     <br>
     <button type="submit" onclick="updateTask()">Update</button>
 </body>
-<script src="../js/validate.js"></script>
+<script src="../js/updateToDO.js"></script>
 </html>
