--- a/html-pages/viewTask.html
+++ b/html-pages/viewTask.html
@@ -43,7 +43,7 @@
         <div class="searchBar" >
             <h4 >Search by</h4>
             <select name="searchTask" id="searchTask" onchange="searchBy()">
-            <option value="">-</option>
+            <option value="-">-</option>
             <option value="taskName">TaskName</option>
             <option value="taskDate">Date</option>
             </select>
@@ -56,5 +56,5 @@
         </table>
     </div>
 </body>
-<script src="../js/validate.js"></script>
+<script src="../js/viewToDo.js"></script>
 </html>
