--- a/html-pages/deleteTask.html
+++ b/html-pages/deleteTask.html
@@ -24,5 +24,5 @@
         <input type="button" value="Submit" name="Delete" id="subbtn" onclick="deleteTask()">
     </form>
 </body>
-<script src="../js/validate.js"></script>
+<script src="../js/deleteToDo.js"></script>
 </html>
