mark todays task as done

--- a/html-pages/index.html
+++ b/html-pages/index.html
@@ -94,6 +94,16 @@
     </div>
     
     <div class="wrapper">
+        <div class="todayContainer">
+            <h2>Today's Task</h2>
+            <table id="TodayTable">
+
+            </table>
+            <br>
+            <button type="submit" onclick="DoTask()" style="float: right;">Done</button>
+            <br>
+            <br>
+        </div>
         <div class="viewTaskFormcontainer" >
        
             <h2>View To-Do task</h2>
