category added in task

--- a/html-pages/login.html
+++ b/html-pages/login.html
@@ -16,7 +16,7 @@
             User Name : <br><input type="text" class="inp" id="luname" >
             <br>
             <span class="errmsg" id="loginuerrmsg"></span>
-            <br>Password : <br><input type="password" class="inp" id="lpassword" >
+            <br>Password : <br><input type="password" class="inp" id="lpassword" autocomplete="on" >
             <br>
             <span class="errmsg" id="loginperrmsg"></span>
             <br>
