--- a/html-pages/viewTask.html
+++ b/html-pages/viewTask.html
@@ -26,6 +26,7 @@
            <option value="taskName">TaskName</option>
            <option value="taskDate">Date</option>
            <option value="taskStatus">Status</option>
+           <option value="taskCategory">Category</option>
            <option value="taskReminder">IS Reminder</option>
            <option value="taskPublic">IS Public</option>
        </select>
